# svetlya4ki-back

./: .gitignore  alembic.ini  pyproject.toml  pytest.ini
src/: config.py  main.py
src/auth/: auth_dao.py  constants.py  models.py  router.py  shemas.py
src/auth/security/: jwt.py  password.py
src/auth/utils/: dependensies.py  jwt_generate.py  services.py
src/core/: exceptions.py  responses.py
src/database/: dao.py  db_connection.py
src/inventory/: inventory_dao.py  models.py  router.py  schemas.py
src/inventory/utils/: services.py
src/migrations/: env.py
src/migrations/versions/: 0d37aab9502f_inventories_table.py  1eead5858077_users_table.py  652bb415c8b4_companies_table.py  705a9b224a93_invitations_table.py  af7f480e0c05_categories_table.py  d436e8677aec_test_revision.py
src/profile/: router.py  schemas.py
tests/: conftest.py  inventory_utils.py  utils.py
tests/integration/: auth_test.py  database_test.py  inventory_test.py  profile_test.py
tests/unit/: jwt_test.py  password_test.py
