[tool.poetry]
name = "svetlya4ki-back"
version = "0.1.0"
description = "API service for business management in the technical production sector."
authors = ["Kirill <my@ksalnikov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.11.0"
fastapi = "^0.119.0"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.0"
uvicorn = "^0.37.0"
jose = "^1.0.0"
passlib = "^1.7.4"
pydantic = "^2.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
